Commented unwanted line

--- a/Episode1/index.html
+++ b/Episode1/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="root"></div>
 
-    CREATE ELEMENT AND INJEC THEM BY JS
+    <!-- CREATE ELEMENT AND INJEC THEM BY JS -->
 
     <!-- <script>
         const root = document.getElementById("root");
