--- a/Episode1/index.html
+++ b/Episode1/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="root"></div>
+    <!-- <h2>Namaste React Episode #3</h2> -->
 
     <!-- CREATE ELEMENT AND INJEC THEM BY JS -->
 
@@ -22,10 +23,12 @@
 
     <!-- Including the React Scripts Fromt the CDN to use the React in our project.  -->
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js">
-    </script>
+
+    <!-- we installed react and react dom over a package so we commented the cdn links over below -->
+
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+    <script type="module" src="./App.js"></script>
 </body>
 
 </html>
